# miguitas

./: .gitignore  README.md  pyproject.toml
models/atom/: Atom.py  doc.md
prompts/12/01/26/: PROPUESTA_ARQUITECTURA.md  REPORTE_MIGUITAS.md
src/: main.py
src/miguitas/: main.py
src/miguitas/tools/: chemistry.py
src/miguitas/tools/models/: global_store.py
src/miguitas/tools/models/atom/: Atom.py
src/miguitas/tools/models/atom/docs/: modelo.md
src/miguitas/tools/models/molecule/: Molecule.py  bond.py  molecule_node.py
src/miguitas/tools/models/molecule/docs/: doc.md
src/tools/models/atom/: Atom.py
test/: verify_atom_node.py
