[project]
name = "miguitas"
version = "0.1.0"
description = "investigación teórica de partículas subatómicas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.2",
    "pydantic>=2.12.5",
]
[project.scripts]
miguitas = "miguitas.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

